[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "astroway"
version = "1.0.0"
description = "Official Python SDK for the AstroWay API — natal, synastry, transits, Vedic, Human Design, Tarot, Numerology, AI horoscopes. Type-safe, retry-aware, OpenAPI 3.1 generated."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "AstroWay", email = "astroway.info@gmail.com" }]
keywords = [
  "astrology", "api", "sdk",
  "natal-chart", "synastry", "transits",
  "vedic", "human-design", "tarot", "numerology",
  "swiss-ephemeris", "openapi",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://api.astroway.info/docs/"
Repository = "https://github.com/astroway/astroway-python"
Issues = "https://github.com/astroway/astroway-python/issues"
Changelog = "https://github.com/astroway/astroway-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
aiohttp = [
  "httpx-aiohttp>=0.1",
]
django = [
  "django>=4.2",
]
fastapi = [
  "fastapi>=0.110",
  "starlette>=0.36",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "datamodel-code-generator[http]>=0.26",
  # Framework deps for integration tests; intentionally NOT pulling
  # httpx-aiohttp here — test_http_client.py asserts the ImportError path
  # when the optional extra is absent.
  "django>=4.2",
  "fastapi>=0.110",
]

[tool.hatch.build.targets.wheel]
packages = ["src/astroway"]

[tool.hatch.build.targets.sdist]
include = [
  "src/astroway",
  "openapi.json",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
